added bird descriptions, images, & audio

--- a/meadowlark.html
+++ b/meadowlark.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meadowlark</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -19,26 +21,38 @@
                 <a href="canary.html">canary</a>
             </li>
             <li>
-                <a href="rooster.html">most elusive bird</a>
+                <a href="rooster.html">Rooster</a>
             </li>
         </ul>
     </nav>
     <main>
         <h1>
-            <!-- Bird name here -->
+            Meadowlark
         </h1>
-        <!-- Description of bird -->
+        <p>Meadowlarks are sharp-billed plump birds, 20 to 28 cm (8 to 11 inches) long. The two species in North America
+            look alike: streaked brown above, with yellow breast crossed by a black V and a short tail with distinctive
+            white outer feathers. The eastern, or common, meadowlark</p>
         <div>
-            <!-- Image of bird -->
-            <!-- Audio of bird -->
+
+            <img src="assets/images/western-meadowlark.jpg" alt="western-meadowlark-bird">
+
+            <audio controls src="assets/sounds/meadowlark.mp3">
+                <p>Your browser is out of date! Get with the times.</p>
+            </audio>
             <div>
-                <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Western_Meadowlark_-_Oregon_-_USA_S4E9863_(23593630930).jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/2180-Meadowlark.html">SoundBible</a></h4>
+                <h4>Image credit: <a
+                        href="https://commons.wikimedia.org/wiki/File:Western_Meadowlark_-_Oregon_-_USA_S4E9863_(23593630930).jpg">Wikimedia</a>
+                    Audio credit: <a href="http://soundbible.com/2180-Meadowlark.html">SoundBible</a></h4>
             </div>
         </div>
         <div>
             <h2>Video on Youtube</h2>
-            <!-- video iframe here -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3o0FC7aqg94"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </main>
 </body>
+
 </html>
