--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
                 <a href="canary.html">canary</a>
             </li>
             <li>
-                <a href="rooster.html">most elusive bird</a>
+                <a href="rooster.html">Rooster</a>
             </li>
+            
         </ul>
     </nav>
     <!-- Add main tag here -->
+
+    <main>
+
+        <h1>Hi, Karson!</h1>
+
+        <img src="https://cdn.pixabay.com/photo/2017/05/08/13/15/bird-2295431__340.jpg" alt="bird-banner">
+
+    </main>
 </body>
 </html>
