--- a/rooster.html
+++ b/rooster.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rooster</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -19,26 +21,37 @@
                 <a href="canary.html">canary</a>
             </li>
             <li>
-                <a href="rooster.html" class="current-page">most elusive bird</a>
+                <a href="rooster.html" class="current-page">Rooster</a>
             </li>
         </ul>
     </nav>
     <main>
         <h1>
-            <!-- Bird name here -->
+            Rooster
         </h1>
-        <!-- Description of bird -->
+        Rooster. Bird. An adult male chicken is called a “rooster” and an adult female is called a “hen.” Roosters are
+        larger, usually more brightly colored, and have larger combs on top of their heads compared to hens. Chickens
+        can fly but because they are heavy, they can only go about 60 meters (200 ft).
         <div>
-            <!-- Image of bird -->
-            <!-- Audio of bird -->
+            <img src="assets/images/rooster.jpg" alt="picture of canary">
+
+            <audio controls src="assets/sounds/rooster.mp3">
+                <p>Your browser is out of date! Get with the times.</p>
+            </audio>
             <div>
-                <h4>Image credit: <a href="https://www.pickpik.com/animal-avian-bird-feathers-macro-poultry-8199">PickPik</a> Audio credit: <a href="http://soundbible.com/2040-Rooster-Crowing-2.html ">SoundBible</a></h4>
+                <h4>Image credit: <a
+                        href="https://www.pickpik.com/animal-avian-bird-feathers-macro-poultry-8199">PickPik</a> Audio
+                    credit: <a href="http://soundbible.com/2040-Rooster-Crowing-2.html ">SoundBible</a></h4>
             </div>
         </div>
         <div>
             <h2>Video on Youtube</h2>
-            <!-- video/iframe here -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IhNcw2AYi_8"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </main>
 </body>
+
 </html>
